--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ main {
     border-width: 1px;
     border-radius: 25px;
     padding: 15px;
+    min-height: 300px;
     background-color: rgb(238, 238, 238);
 }
 
@@ -93,6 +94,7 @@ main {
 }
 
 img {
+    max-width: 100%;
     height: 150px;
 }
 
