--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 html {
     background-color: rgb(57, 62, 70);
+    overflow: hidden;
 }
 
 a {
@@ -78,11 +79,13 @@ main {
     border-radius: 25px;
     padding: 15px;
     min-height: 300px;
+    box-shadow: 0px 0px 60px -11px rgba(255, 255, 255, 0.5);
     background-color: rgb(238, 238, 238);
 }
 
 .projects div:hover {
     transition: 0.5s;
+    box-shadow: 0px 0px 20px 15px rgba(0, 0, 0, 0.5);
     background-color: rgb(0, 173, 181);
     transform: scale(1.2, 1.2);
     padding: 0;
@@ -94,7 +97,6 @@ main {
 }
 
 img {
-    transition: 0.5s;
     width: 100%;
     height: 150px;
 }
