--- a/projects/Ejercicio_3/restaurantes/comidas/css/style.css
+++ b/projects/Ejercicio_3/restaurantes/comidas/css/style.css
@@ -71,6 +71,10 @@
     font-size: 20px;
 }
 
+.fs15 {
+    font-size: 15px;
+}
+
 .fs10 {
     font-size: 10px;
 }
@@ -107,7 +111,7 @@
 .header {
     position: relative;
     height: 300px;
-    background-image: url(../../img/restaurante1.jpg);
+    background-image: url(../../../img/plato1.jpg);
     background-position: center;
     background-size: cover;
     padding: 10%;
@@ -211,7 +215,10 @@ nav ul li {
 }
 
 .ofresto .lista {
-    
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin: auto;
 }
 
 .lista .plato {
@@ -228,7 +235,7 @@ nav ul li {
 
 .plato .imagen {
     height: 100%;
-    width: auto;
+    width: 40%;
     border-radius: 14px 0 0 14px;
 }
 
@@ -266,28 +273,19 @@ nav ul li {
     color: rgb(34, 190, 138);
 }
 
-.rate {
+.rate{
     position: absolute;
-    background-color:  rgb(34, 190, 138);
-    height: 50px;
-    width: 50px;
+    right: 50px;
+    bottom: -80px;
+    transform: scale(1.5);
+    background-color: rgb(34, 190, 138);
+    height: 40px;
+    width: 70px;
     border-radius: 15px 0 15px 0px;
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     color: white;
     font-size: 16pt;
-}
-
-.rate__card{
-    position: relative;
-    right: -150px;
-    bottom: 35px;
-    width: 70px;
-}
-
-.rate__resto{
-    right: 5%;
-    bottom: -25px;
 }
 
 .sm{
@@ -310,7 +308,6 @@ h3 {
 }
 
 h5 {
-    text-align: center;
     font-weight: normal;
 }
 
@@ -326,13 +323,6 @@ h5 {
     padding: 30px 30px 0 30px;
 }
 
-.platos {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    margin: auto;
-}
-
 .plato {
     display: flex;
     margin: 15px;
@@ -346,6 +336,29 @@ h5 {
 
 input[type="checkbox"] {
     display: none;
+}
+
+input[type="text"] {
+    width: 80%;
+    margin: 30px 10%;
+    padding: 20px;
+    border-width: 0 0 1px 0;
+    border-color: rgb(194, 194, 194);
+}
+
+.count {
+    width: 70px;
+    height: 50px;
+    border: none;
+    background-color: rgb(73, 230, 177);
+}
+
+.counter {
+    width: 100px;
+    height: 50px;
+    border: none;
+    text-align: center;
+    background-color: rgb(73, 230, 177);
 }
 
 .nav_mobile{
