--- a/projects/Ejercicio_3/restaurantes/css/style.css
+++ b/projects/Ejercicio_3/restaurantes/css/style.css
@@ -348,6 +348,44 @@ input[type="checkbox"] {
     display: none;
 }
 
+.opiniones {
+    background-color: rgb(240, 240, 240);
+    height: calc(100vh - 157px);
+    padding: 20px;
+}
+
+.opinion {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    height: 100px;
+    background-color: rgb(230, 230, 230);
+    border: solid 1px black;
+    margin: 10px;
+}
+
+.imagen-perfil img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 15px;
+}
+
+.opinion .descrip {
+    width: 100%;
+}
+
+.texto-opinion {
+    width: 100%;
+}
+
+.estrellas {
+    position: relative;
+    right: 20px;
+    top: -20px;
+    width: 200px;
+}
+
 .nav_mobile{
     position: fixed;
     bottom: 0;
