--- a/projects/Ejercicio_3/restaurantes/css/mediaqueries.css
+++ b/projects/Ejercicio_3/restaurantes/css/mediaqueries.css
@@ -4,9 +4,9 @@
         width: 0px;
     }
 
-    .header{
+    /*.header{
         height: 150px;
-    }
+    }*/
 
     nav{width: 100%;}
     .ofresto{width: 96%; margin: auto; }
@@ -17,9 +17,5 @@
 
     .lista .resto{
         width: 100%;
-    }
-
-    nav ul {
-        justify-content: normal;
     }
 }
